header clipping fix

--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@ nav {
     z-index: 1;
 }
 h2 {
-    font-size: 50px;
+    font-size: 3.2vw;
     font-weight: 400;
 }
 #mapid {
